Fixed style bug in auto-complete.  Z-index was wrong.

--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -256,6 +256,7 @@ div.auto_complete {
     overflow-x: hidden;
     display: none;
     text-align: left;
+    z-index: 100;
 }
 
 div.auto_complete ul {
